[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "square_file_store_helper"
version = "3.0.2"
description = "helper to access the file store layer for my personal server."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.12"
license = { text = "GPLv3" }
authors = [
    { name = "Parth Mukesh Mangtani", email = "thepmsquare@gmail.com" },
]
urls = { homepage = "https://github.com/thepmsquare/square_file_store_helper" }
keywords = ["file", "helper", "utilities"]
dependencies = [
    "requests>=2.31.0",
    "kiss_headers>=2.4.3",
    "square_commons>=2.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.hatch.build.targets.wheel]
packages = ["square_file_store_helper"]
