[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "square_file_store_helper"
version = "3.1.1"
description = "helper to access the file store layer for my personal server."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.12"
license = { text = "GPLv3" }
authors = [
    { name = "Parth Mukesh Mangtani", email = "thepmsquare@gmail.com" },
]
urls = { homepage = "https://github.com/thepmsquare/square_file_store_helper" }
keywords = ["file", "helper", "utilities"]
dependencies = [
    "requests>=2.31.0",
    "kiss_headers>=2.4.3",
    "square_commons>=3.1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
all = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.uv.build-backend]
module-name = "square_file_store_helper"
module-root = ""
